@@ -59,7 +59,7 @@ public class MainActivity extends Activity implements View.OnClickListener {
     ArrayList<Area> areas = new ArrayList<>();
     private static final int RC_BARCODE_CAPTURE = 9001;
     private static final String TAG = "BarcodeMain";
-    private final int MAX_SZIE = 100;
+    private final int MAX_SZIE = 45;
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
@@ -144,7 +144,7 @@ public class MainActivity extends Activity implements View.OnClickListener {
         NCMBQuery<NCMBObject> query = new NCMBQuery<>("Books");
 
         final int modeNum[] = new int[MAX_SZIE];
-        for(int i = 0 ; i < MAX_SZIE ; i++)
+        for(int i = 0 ; i <MAX_SZIE ; i++)
             modeNum[i] = 0;
         //降順+14
         query.addOrderByDescending("updateDate");
@@ -160,21 +160,29 @@ public class MainActivity extends Activity implements View.OnClickListener {
                     //検索失敗時の処理
                 } else {
                     for(NCMBObject result : results) {
-                        Log.d(TAG, "done: "+ result.getCreateDate());
                         String cm = result.getString("cm");
 
-                        int mode = (int) Float.valueOf(cm).intValue();
+                        int mode = new Integer(cm).intValue();
+                        Log.d(TAG, "done: mode ="+mode);
                         modeNum[mode]++;
                         areas.get(result.getInt("position")).addfreq();
                     }
                     //検索成功時の処理
                     //WriteAreaCsv();
-             for(int i = 0 ; i < MAX_SZIE ; i++)
-                 Log.d(TAG, "done: i = "+i+", mode = "+modeNum[i]);
+                    Log.d(TAG, "done: "+getMax(modeNum));
                 }
             }
         });
 
+    }
+
+    public int getMax(int nums[]){
+        int max = -1;
+        for(int i = 0 ; i < nums.length ; i++)
+            if(max < nums[i])
+                max = nums[i];
+
+        return max;
     }
 
     public void ReadAreaCsv() {
